pod-security/baseline/disallow-host-ports/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox-again
    image: busybox:1.35
    ports:
    - containerPort: 8099
    - hostPort: 8090
      containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    ports:
    - containerPort: 8090
      hostPort: 8090
    - containerPort: 8099
      hostPort: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    ports:
    - containerPort: 8090
      hostPort: 8090
