pod-security/baseline/disallow-host-ports/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox-again
    image: busybox:1.35
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    ports:
    - containerPort: 8090
    - containerPort: 8088
      hostPort: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    ports:
    - containerPort: 8088
      hostPort: 0
