pod-security/baseline/disallow-host-ports/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
      - name: busybox-again
        image: busybox:1.35
        ports:
        - containerPort: 8080
